Fix section spacing and clamp issues with font

--- a/assets/style.css
+++ b/assets/style.css
@@ -252,20 +252,20 @@ body {
 .hero-section {
     position: relative;
     width: 100%;
-    min-height: 98vh;
+    min-height: 97vh;
     display: flex;
     align-items: center;
     justify-content: center;
     text-align: center;
     background: url("/assets/images/belko-bg.jpg") center/cover no-repeat;
     color: var(--color-light);
-    padding-top: calc(var(--space-section) + 10rem);
+    padding-top: calc(var(--space-section) + 8rem);
     /***** TEMP PADDING *****/
 }
 
 /* Hero Title */
 .hero-title {
-    font-size: clamp(2.5rem, 6vw, 5rem);
+    font-size: 5rem;
     font-weight: 600;
     line-height: 1.1;
     color: var(--color-light);
@@ -287,18 +287,18 @@ body {
 
 /* Hero Subtitle */
 .hero-subtitle {
-    font-size: clamp(1.1rem, 2.2vw, 1.75rem);
+    font-size: 2rem;
     font-weight: 500;
     letter-spacing: 0.01em;
     text-align: center;
     max-width: 575px;
     margin: 1rem auto;
-    line-height: 1.55;
+    line-height: 1.25;
 }
 
 /* Hero Description */
 .hero-description {
-    font-size: clamp(0.9rem, 1.6vw, 1.15rem);
+    font-size: 1.15rem;
     font-weight: 300;
     letter-spacing: 0.01em;
     text-align: center;
@@ -313,6 +313,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: flex-end;
+    padding: 0 1rem 0 0;
 }
 
 /* Hero Slogan (Circular Spinning Badge) */
@@ -365,6 +366,7 @@ body {
 .hero-cta {
     display: flex;
     flex-direction: row;
+    margin-top: -1rem;
     gap: 1rem;
 }
 
@@ -373,8 +375,8 @@ body {
     position: absolute;
     bottom: 0;
     left: 0;
-    width: 15vw;
-    height: 45vh;
+    width: 290px;
+    height: 380px;
     background: linear-gradient(to top right,
             var(--color-primary) 50%,
             transparent 50%);
